# ilm-transcript

./: CLAUDE.md  README.md  SPEC.md  TASKS.md  convert.py  pyproject.toml  transcribe.py  utils.py
.claude/skills/spec/: SKILL.md
tests/: test_convert.py  test_transcribe.py  test_utils.py
