[project]
name = "ilm-transcript"
version = "0.1.0"
description = "Local CLI tool for transcribing Islamic lectures from YouTube or local audio files"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2025.1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ilm = "transcribe:main"
ilm-dl = "convert:main"

[tool.setuptools]
py-modules = ["transcribe", "convert", "utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
